force-app/main/default/objects/Transaction__c/fields/AmountCollectedJPY__c.field-meta.xml
<CustomField>
    <fullName>AmountCollectedJPY__c</fullName>
    <label>Amount Collected (JPY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>