force-app/main/default/objects/Transaction__c/fields/AmountPaidJPY__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidJPY__c</fullName>
    <label>Amount Paid (JPY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>