force-app/main/default/objects/Transaction__c/fields/PaymentRequest__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequest__c</fullName>
    <label>Payment Request</label>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipLabel>Transaction</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>