force-app/main/default/objects/Transaction__c/recordTypes/AmountCollected_USD.recordType-meta.xml
<RecordType>
    <fullName>AmountCollected_USD</fullName>
    <active>true</active>
    <label>Amount Collected (USD)</label>
</RecordType>