force-app/main/default/objects/Transaction__c/recordTypes/AmountCollectedJPY.recordType-meta.xml
<RecordType>
    <fullName>AmountCollectedJPY</fullName>
    <active>true</active>
    <label>Amount Collected (JPY)</label>
</RecordType>