force-app/main/default/objects/Transaction__c/recordTypes/AmountPaidJPY.recordType-meta.xml
<RecordType>
    <fullName>AmountPaidJPY</fullName>
    <active>true</active>
    <label>Amount Paid (JPY)</label>
</RecordType>