force-app/main/default/objects/Transaction__c/recordTypes/AmountPaidUSD.recordType-meta.xml
<RecordType>
    <fullName>AmountPaidUSD</fullName>
    <active>true</active>
    <label>Amount Paid (USD)</label>
</RecordType>